# ffmpeg-worker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.gitea/workflows/: release.yml
.github/workflows/: release.yml
app/: ffmpeg.py  main.py  models.py  queue.py  store.py
docs/plans/: 2025-11-30-ffmpeg-worker-design.md  2025-11-30-ffmpeg-worker-implementation.md
tests/: test_api.py  test_ffmpeg.py  test_integration.py  test_models.py  test_queue.py  test_store.py
